Test with data for a different database (recipes)

--- a/interview_generation/instructions/part-1/part-1-a.mustache
+++ b/interview_generation/instructions/part-1/part-1-a.mustache
@@ -1,13 +1,13 @@
-Create a function in the file `db.js` called `{{ p1.funcName }}`.
+Create a function in the file `db.js` called `{{ p1.dbFuncName }}`.
 
-The function should accept a string parameter named `{{ p1.parameterName }}`. It should use the `pg-promise` database client (already instantiated) and return a promise that resolves to the result of the query (an array of objects containing the {{ p1.columnName }}s of all {{ p1.dataName }}s on that flight. The property for the {{ p1.dataName }} name values in these objects should be called `{{ p1.columnName }}`).
+The function should accept a string parameter named `{{ p1.parameterName }}`. It should use the `pg-promise` database client (already instantiated) and return a promise that resolves to the result of the query (an array of objects containing the {{ p1.columnName }}s of all {{ p1.dataName }}s for that {{ p1.parameterDescription }}. The property for the {{ p1.dataName }} name values in these objects should be called `{{ p1.columnName }}`).
 
 Sample result:
 
 ```
-{{{ p1.sampleResult }}}
+{{{ p1.sampleDbResult }}}
 ```
 
 - [ ] __5:__ The function takes a parameter called `{{ p1.parameterName }}`.
-- [ ] __15:__ The result set of the SQL query includes one row containing a {{ p1.dataName }} {{ p1.columnName }} field for every {{ p1.dataName }} on the specified {{ p1.parameterDescription }}.
+- [ ] __15:__ The result set of the SQL query includes one row containing a {{ p1.dataName }} {{ p1.columnName }} field for every {{ p1.dataName }} for the specified {{ p1.parameterDescription }}.
 - [ ] __10:__ The function returns a promise which resolves to the result of the query.
