--- a/interview_generation/instructions/README.mustache
+++ b/interview_generation/instructions/README.mustache
@@ -14,7 +14,7 @@ This document contains the requirements for completing your interview challenge 
 First, we'll need to navigate to the directory on the interview USB drive where the challenge files are. On a mac, you'll find it here:
 
 ```sh
-cd "/Volumes/INTERVIEWDRIVE/[YOUR DIRECTORY NAME]"
+cd "/Volumes/INTERVIEWDRIVE/{{ learnerName }}"
 ```
 
 Next, we need to setup the challenge. You can do so by simply running a script:
