Update instructions with variable learner and drive name

--- a/interview_generation/instructions/README.mustache
+++ b/interview_generation/instructions/README.mustache
@@ -14,7 +14,7 @@ This document contains the requirements for completing your interview challenge 
 First, we'll need to navigate to the directory on the interview USB drive where the challenge files are. On a mac, you'll find it here:
 
 ```sh
-cd "/Volumes/INTERVIEWDRIVE/{{ learnerName }}"
+cd "{{ outputDir }}"
 ```
 
 Next, we need to setup the challenge. You can do so by simply running a script:
@@ -68,4 +68,4 @@ Let's do a little cleanup:
 5. Quit your text editor application
 6. Close any browser windows pertaining to the challenge
 7. Remove the `Postico` entry for the database connection (if applicable)
-8. Eject the USB drive (`diskutil unmount INTERVIEWDRIVE`)
+8. Eject the USB drive (`diskutil unmount {{ driveName }}`)
