--- a/interview_pieces/instructions/part-2/part-2-a.mustache
+++ b/interview_pieces/instructions/part-2/part-2-a.mustache
@@ -1,6 +1,6 @@
 ##### GET route
 
-Implement handling for a route/endpoint `GET /{{ p2.endpoint }}`. It should accept a query string parameter `{{ p2.parameterName }}` -- a string value representing a flight number. Use the `{{ p2.dbFuncName }}` function provided in `db.js` to retrieve the list of {{ p2.dataName }}s for the specified {{ p2.parameterDescription }}.
+Implement handling for a route/endpoint `GET /{{ p2.endpoint }}`. It should accept a query string parameter `{{ p2.parameterName }}` -- a string value representing a {{ p2.parameterDescription }}. Use the `{{ p2.dbFuncName }}` function provided in `db.js` to retrieve the list of {{ p2.dataName }}s for the specified {{ p2.parameterDescription }}.
 
 - [ ] __5:__ Route is a GET route
 - [ ] __20:__ Route uses the `{{ p2.parameterName }}` query string parameter and the provided `{{ p2.dbFuncName }}` function to retrieve the {{ p2.dataName }} data
