Refactor to make data reusable for different sections.

--- a/interview_pieces/instructions/README.mustache
+++ b/interview_pieces/instructions/README.mustache
@@ -68,4 +68,4 @@ Let's do a little cleanup:
 5. Quit your text editor application
 6. Close any browser windows pertaining to the challenge
 7. `dropdb {{ dbName }}`
-8. Eject the USB drive (`diskutil unmount {{ drivePath }}`)
+8. Eject the USB drive (`diskutil unmount {{{ drivePath }}}`)
