--- a/interview_pieces/code/a/app/p2app.mustache
+++ b/interview_pieces/code/a/app/p2app.mustache
@@ -1,17 +1,12 @@
 require('dotenv').config({path: '../.env'})
 const express = require('express')
-const {getFlightPassengers} = require('./db/db')
+const {{ p2.dbFuncName }} = require('./db/db')
 
-// JSDoc for getFlightPassengers
-/**
- * Get the names for passengers on a specific flight
- * @param  {string} flightNumber  Flight number for which to retrieve passenger names.
- * @return {Promise}              Promise that resolves to an array of strings.
- *                                  Each string is a passenger name.
- */
+// JSDoc for {{ p2.dbFuncName }}
+{{> jsDoc}}
 
 const app = express()
 // app.set('view engine', 'pug')
 // app.set('view engine', 'ejs')
 
-app.listen(3000, () => console.log('Flying high on port 3000!'))
+app.listen(3000, () => console.log('{{ p2.serverRunningPhrase }} on port 3000!'))
