Refactor for better code maintainability / ease of adding new challenges

--- a/interview_pieces/instructions/README.mustache
+++ b/interview_pieces/instructions/README.mustache
@@ -27,9 +27,9 @@ cd setup && npm run setup && cd ..
 
 This challenge has three parts:
 
-- Part 1: {{ description.part1 }}
-- Part 2: {{ description.part2 }}
-- Part 3: {{ description.part3 }}
+- Part 1: {{ p1.description }}
+- Part 2: {{ p2.description }}
+- Part 3: {{ p3.description }}
 
 ### Part 1: SQL
 
