WIP: refactor to make variable names more consistent

--- a/interview_pieces/code/public/a/p3.css.mustache
+++ b/interview_pieces/code/public/a/p3.css.mustache
@@ -1,14 +1,10 @@
-table.flight-passengers {
+table.{{ endpoint }} {
   border-collapse: collapse;
 }
 
-table.flight-passengers th, table.flight-passengers td {
+table.{{ endpoint }} th, table.{{ endpoint }} td {
   border: 1px solid black;
   padding: 3px;
-}
-
-div.total-flights {
-  margin-top: 10px;
 }
 
 .light-gray {
