--- a/interview_pieces/code/views/a/p2.ejs.mustache
+++ b/interview_pieces/code/views/a/p2.ejs.mustache
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Version 2 Challenge Part 2</title>
+    <title>Practice Phase Challenge Part 2</title>
   </head>
   <body>
-    <h1>Flight Roster</h1>
+    <h1>{{ viewTitle }}</h1>
     <div id="message"></div>
   </body>
 </html>
