--- a/interview_pieces/code/views/a/p2.pug.mustache
+++ b/interview_pieces/code/views/a/p2.pug.mustache
@@ -1,6 +1,8 @@
+{{=<% %>=}}
+
 html
   head
-    title Version 2 Challenge Part 2
+    title Practice Phase Challenge Part 2
   body
-    h1 Flight Roster
+    h1 <% viewTitle %>
     div(id="message")
