--- a/interview_pieces/code/views/a/p3.ejs.mustache
+++ b/interview_pieces/code/views/a/p3.ejs.mustache
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Version 2 Challenge Part 3</title>
-  <link rel="stylesheet" href="/flight_roster.css">
+  <title>Practice Phase Challenge Part 3</title>
+  <link rel="stylesheet" href="/{{ endpoint }}.css">
 </head>
 
 <body>
-  <h1>Passengers on Flight <%= flightNumber %> </h1>
-  <button id="eject-passenger">Give passenger a parachute</button>
+  <h1>{{ p3viewTitleStart }} <%= {{ parameterName }} %> </h1>
+  <button id="{{ buttonId }}">{{ buttonText }}</button>
   <div id="message">
     <p>
       <% if (locals.message) { %>
@@ -17,15 +17,15 @@
       <% } %>
       </p>
   </div>
-  <table class="flight-passengers">
+  <table class="{{ endpoint }}">
     <tr>
-      <th>Passenger Name</th>
+      <th>{{ listTitle }}</th>
     </tr>
-    <% if (locals.passengers) { %>
-      <% for (var passenger of passengers) { %>
-        <tr class="passenger">
+    <% if (locals.{{ dataName }}s) { %>
+      <% for (var {{ dataName }} of {{ dataName }}s) { %>
+        <tr class="{{ dataName }}">
           <td>
-            <%= passenger.name %>
+            <%= {{ dataName }}.{{ dataColumnName }} %>
           </td>
         </tr>
       <% } %>
@@ -34,7 +34,7 @@
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
-  <script src="/flight_roster.js"></script>
+  <script src="/{{ endpoint }}.js"></script>
 </body>
 
 </html>
