Fix template variable issues from refactor

--- a/interview_pieces/instructions/README.mustache
+++ b/interview_pieces/instructions/README.mustache
@@ -39,7 +39,7 @@ This challenge has three parts:
 
 An ER diagram has been provided that visualizes the database schema:
 
-![ER Diagram](/part-1/{{ dbName }}_ERD.png)
+![ER Diagram](/part-1/{{ dbType }}_ERD.png)
 
 {{> part-1}}
 
