--- a/interview_pieces/code/views/a/p3-ejs.mustache
+++ b/interview_pieces/code/views/a/p3-ejs.mustache
@@ -25,7 +25,7 @@
       <% for (var {{ dataName }} of {{ dataName }}s) { %>
         <tr class="{{ dataName }}">
           <td>
-            <%= {{ dataName }}.{{ dataColumnName }} %>
+            <%= {{ dataName }} %>
           </td>
         </tr>
       <% } %>
