--- a/interview_pieces/code/views/a/p3-pug.mustache
+++ b/interview_pieces/code/views/a/p3-pug.mustache
@@ -15,7 +15,7 @@ html
       - if (typeof(<% dataName %>s) !== 'undefined'){
         each <% dataName %> in <% dataName %>s
           tr(class='<% dataName %>')
-            td= <% dataName %>.name
+            td= <% dataName %>
       -}
     script(src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous")
