Refactor template data. Minor tweaks to README and recipes seed file.

--- a/interview_pieces/code/setup/package_json.mustache
+++ b/interview_pieces/code/setup/package_json.mustache
@@ -6,7 +6,8 @@
     "db:setup": "npm run db:create && npm run db:seed",
     "db:create": "psql < schema.sql",
     "db:seed": "psql {{ dbName }} < seed.sql",
-    "install:all": "cd ../part-1 && npm install && cd ../part-2 && npm install && cd ../part-3 && npm install"
+    "install:all": "cd ../part-1 && npm install && cd ../part-2 && npm install && cd ../part-3 && npm install",
+    "setup": "npm run db:setup && npm run install:all"
   },
   "dependencies": {
     "dotenv": "^4.0.0",
