--- a/interview_pieces/instructions/p1-a.mustache
+++ b/interview_pieces/instructions/p1-a.mustache
@@ -9,5 +9,7 @@ Sample result:
 ```
 
 - [ ] __5:__ The function takes a parameter called `{{ p1.parameterName }}`.
-- [ ] __15:__ The result set of the SQL query includes one row containing a {{ p1.dataName }} {{ p1.dataColumnName }} field for every {{ p1.dataName }} for the specified {{ p1.parameterDescription }}.
-- [ ] __10:__ The function returns a promise which resolves to the result of the query.
+- [ ] __5:__ The function executes a SQL query using `pg-promise`
+- [ ] __5:__ The query uses index variables (e.g. `$1`) to make the query dynamic
+- [ ] __5:__ The function returns a promise which resolves to the result of the query.
+- [ ] __20:__ The result set of the SQL query includes one row containing a {{ p1.dataColumnName }} field for every {{ p1.dataName }} for the specified {{ p1.parameterDescription }}.
