--- a/interview_pieces/code/app/common/define_app_and_views.mustache
+++ b/interview_pieces/code/app/common/define_app_and_views.mustache
@@ -1,7 +1,7 @@
 {{=<% %>=}}
 
 const express = require('express')
-const {<% dbFuncName %>} = require('./db/db')
+const db = require('./db/db')
 
 const app = express()
 // app.set('view engine', 'pug')
