Make part1 easier (no helper function necessary). Add data for movies and teams.

--- a/interview_pieces/code/app/b/p3-app.mustache
+++ b/interview_pieces/code/app/b/p3-app.mustache
@@ -3,8 +3,8 @@
 
 app.get('/<%endpoint %>', (req, res) => {
   db.<% p3dbFuncName %>()
-    .then((<% parameter2Name %>s) => {
-      res.render('<% endpoint %>', { <% parameter2Name %>s });
+    .then((<% secondaryTableRootName %>s) => {
+      res.render('<% endpoint %>', { <% secondaryTableRootName %>s });
     })
     .catch((err) => {
       res.render('<% endpoint %>', { message: `An error occurred: ${err.toString()}` });
