--- a/interview_pieces/code/app/common/define_app_and_views.mustache
+++ b/interview_pieces/code/app/common/define_app_and_views.mustache
@@ -1,8 +1,10 @@
 {{=<% %>=}}
 
 const express = require('express')
+const bodyParser = require('body-parser')
 const db = require('./db/db')
 
 const app = express()
+app.use(bodyParser.json())
 // app.set('view engine', 'pug')
 // app.set('view engine', 'ejs')
