--- a/interview_pieces/instructions/README.mustache
+++ b/interview_pieces/instructions/README.mustache
@@ -52,6 +52,10 @@ To start the server, run: `npm start`.
 
 {{> part-3}}
 
+##### Starting the server
+
+To start the server, run: `npm start`.
+
 ## Teardown
 
 Let's do a little cleanup:
