--- a/interview_pieces/instructions/p3-b.mustache
+++ b/interview_pieces/instructions/p3-b.mustache
@@ -1,10 +1,10 @@
-In this section, the scaffolding has been created for a `/{{ p3.endpoint }}` route that returns a page with {{ p3.parameter2Description}}s. Choose a template engine (EJS or Pug) in `app.js`, then make a `GET` request for the `/{{ p3.endpoint }}` resource to see the rendered page.
+In this section, the scaffolding has been created for a `/{{ p3.endpoint }}` route that returns a page with {{ p3.p3itemDescription}}s. Choose a template engine (EJS or Pug) in `app.js`, then make a `GET` request for the `/{{ p3.endpoint }}` resource to see the rendered page.
 
-The challenge for this section: when a user clicks any `{{ p3.parameter2Description }}`, the text for that {{ p3.parameter2Description }} should turn red.
+The challenge for this section: when a user clicks any {{ p3.p3itemDescription }} list item, the text for that item should turn red.
 
 You may use vanilla JS or JQuery.
 
-- [ ] __5:__ At least one {{ p3.parameter2Description }} has a `click` event listener. 
-- [ ] __15:__ Each {{ p3.parameter2Description }} has a `click` event listener.
-- [ ] __5:__ At least one {{ p3.parameter2Description }} turns red when clicked. 
-- [ ] __15:__ Each {{ p3.parameter2Description }} turns red when clicked. 
+- [ ] __5:__ At least one {{ p3.p3itemDescription }} has a `click` event listener. 
+- [ ] __15:__ Each {{ p3.p3itemDescription }} has a `click` event listener.
+- [ ] __5:__ At least one {{ p3.p3itemDescription }} turns red when clicked. 
+- [ ] __15:__ Each {{ p3.p3itemDescription }} turns red when clicked. 
