Minor updates to readme instructions

--- a/interview_pieces/instructions/README.mustache
+++ b/interview_pieces/instructions/README.mustache
@@ -22,9 +22,7 @@ cd setup && npm run setup && cd ..
 
 This challenge has three parts:
 
-- Part 1: {{ p1.description }}
-- Part 2: {{ p2.description }}
-- Part 3: {{ p3.description }}
+{{> partDescriptions }}
 
 ### Part 1: SQL
 
