--- a/interview_pieces/code/app/common/define_app_and_views.mustache
+++ b/interview_pieces/code/app/common/define_app_and_views.mustache
@@ -6,5 +6,6 @@ const db = require('./db/db')
 
 const app = express()
 app.use(bodyParser.json())
+app.use(express.static('public'))
 // app.set('view engine', 'pug')
 // app.set('view engine', 'ejs')
