Create part1-c challenge to find all (flights) for a specified (airline) id, and add data for the flights db.

--- a/interview_pieces/instructions/p1-a.mustache
+++ b/interview_pieces/instructions/p1-a.mustache
@@ -1,6 +1,6 @@
 Create a function in the file `db.js` called `{{ p1.dbFuncName }}`.
 
-The function should accept a string parameter named `{{ p1.parameterName }}`. It should use the `pg-promise` database client (already instantiated) and return a promise that resolves to the result of the query (an array of objects containing the {{ p1.dataColumnName }}s of all {{ p1.dataName }}s for that {{ p1.parameterDescription }}. The property for the {{ p1.dataName }} name values in these objects should be called `{{ p1.dataColumnName }}`).
+The function should accept a string parameter named `{{ p1.parameterName }}`. It should use the `pg-promise` database client (already instantiated) and return a promise that resolves to the result of the query (an array of objects containing the {{ p1.dataColumnName }}s of all {{ p1.dataName }}s for that {{ p1.parameterDescription }}. The property for the {{ p1.dataName }} values in these objects should be called `{{ p1.dataColumnName }}`).
 
 Sample result:
 
