--- a/interview_pieces/code/app/common/define_app_and_views.mustache
+++ b/interview_pieces/code/app/common/define_app_and_views.mustache
@@ -2,7 +2,7 @@
 
 const express = require('express')
 const bodyParser = require('body-parser')
-const db = require('./db/db')
+const { db, <% dbFuncName %>, <% p3dbFuncName %> } = require('./db/db')
 
 const app = express()
 app.use(bodyParser.json())
