Add part 3 for challenge c and associated flights data. Also, fix some inconsistencies with previous challenges.

--- a/interview_pieces/code/app/b/p3-app.mustache
+++ b/interview_pieces/code/app/b/p3-app.mustache
@@ -2,7 +2,7 @@
 <% >defineAppAndView %>
 
 app.get('/<%endpoint %>', (req, res) => {
-  db.<% p3dbFuncName %>()
+  <% p3dbFuncName %>()
     .then((<% secondaryTableRootName %>s) => {
       res.render('<% endpoint %>', { <% secondaryTableRootName %>s });
     })
