--- a/interview_pieces/code/app/a/p3-app.mustache
+++ b/interview_pieces/code/app/a/p3-app.mustache
@@ -6,7 +6,7 @@
 
 app.get('/<%endpoint %>', (req, res) => {
   const <% parameterName %> = req.query.<% parameterName %>;
-  db.<% dbFuncName %>(<% parameterName %>)
+  <% dbFuncName %>(<% parameterName %>)
     .then((<% dataName %>s) => {
       res.render('<% endpoint %>', { <% parameterName %>, <% dataName %>s });
     })
