--- a/interview_pieces/instructions/p3-a.mustache
+++ b/interview_pieces/instructions/p3-a.mustache
@@ -1,3 +1,5 @@
+##### DOM Manipulation
+
 In this section, the scaffolding has been created for a `/{{ p3.endpoint }}` route that returns a {{ p3.endpointDescription }} for any particular {{ p3.parameteDescription }}. Choose a template engine (EJS or Pug) in `app.js`, then make a `GET` request for the `/{{ p3.endpoint }}` resource. Include the query string `{{ p3.parameterName }}={{ p3.exampleGetData }}` to display the {{ p3.endpointDescription }} for that {{ p3.parameterDescription }}.
 
 The challenge for this section: when a user clicks the button labeled `{{ p3.buttonText }}`, one of the {{ p3.dataName }}s (it doesn't matter which one) should be removed from the list. __Note__: The {{ p3.dataName }} only needs to be removed from the page. __There is no need to update the database or communicate with the server in any way.__
