Add data for part-c for teams, recipes and movies

--- a/interview_pieces/code/views/c/p3-ejs.mustache
+++ b/interview_pieces/code/views/c/p3-ejs.mustache
@@ -9,6 +9,7 @@
 
 <body>
   <h1>{{ viewTitle }} </h1>
+  <input type="text" id="{{ mainTableRootName }}-name" placeholder="new {{ mainTableRootName }}">
   <button id="{{ buttonId }}">Add {{ mainTableRootName }}</button>
   <div id="message">
     <p>
