--- a/interview_pieces/instructions/p1-c.mustache
+++ b/interview_pieces/instructions/p1-c.mustache
@@ -1,6 +1,6 @@
 Create a function in the file `db.js` called `{{ p1.dbFuncName }}`.
 
-The function should accept a number parameter named `{{ p1.parameterName }}` and run a query to find the {{ p1.dataColumnName }}s associated with that `{{ p1.parameterName }}`. It should use the `pg-promise` database client (already instantiated) and return a promise that resolves to the result of the query (an array of objects containing the {{ p1.dataColumnName }}s of all {{ p1.mainTableRootName }}s for the specified {{ p1.secondaryTableRootName }} id).
+The function should accept a number parameter named `{{ p1.parameterName }}` and run a query to find the {{ p1.dataColumnDescription }}s associated with that `{{ p1.parameterName }}`. It should use the `pg-promise` database client (already instantiated) and return a promise that resolves to the result of the query (an array of objects containing the {{ p1.dataColumnName }}s of all {{ p1.mainTableRootName }}s for the specified {{ p1.secondaryTableRootName }} id).
 
 Sample result:
 
