--- a/interview_pieces/instructions/p2-c.mustache
+++ b/interview_pieces/instructions/p2-c.mustache
@@ -1,6 +1,6 @@
 ##### GET route
 
-Implement handling for a route/endpoint `GET {{{ p2.endpoint }}}`. Use the `{{ p2.dbFuncName }}` function provided in `db.js` to retrieve the list of {{ p2.dataColumnDescription }}s for the specified {{ p2.secondaryTableName }} id, and use the result to render the data in the templating framework of your choice (Pug or EJS).
+Implement handling for a route/endpoint `GET {{{ p2.endpoint }}}`. Use the `{{ p2.dbFuncName }}` function provided in `db.js` to retrieve the list of {{ p2.dataColumnDescription }}s for the specified {{ p2.secondaryTableRootName }} id, and use the result to render the data in the templating framework of your choice (Pug or EJS).
 
 - [ ] __5:__ Route is a GET route
 - [ ] __10:__ Route accesses the `{{ p2.parameterName }}` URL variable.
