Updated specs for version B to better test for working code.

--- a/interview_pieces/instructions/p1-b.mustache
+++ b/interview_pieces/instructions/p1-b.mustache
@@ -12,4 +12,5 @@ Sample result:
 - [ ] __5:__ The query uses indexed parameters (e.g. `$1`)
 - [ ] __10:__ The result set of the SQL query is an object with the key `id`.
 - [ ] __10:__ After the function runs, there is a new row in the `{{ p1.mainTableRootName }}s` table with the {{ p1.parameter1Description }} `{{ p1.parameter1Name }}`.
-- [ ] __10:__ The new row in the `{{ p1.mainTableRootName }}s` table is associated with the {{ p2.parameter2Description }} `{{ p1.parameter2Name }}`
+- [ ] __5:__ The new row in the `{{ p1.mainTableRootName }}s` table is associated with the {{ p2.parameter2Description }} `{{ p1.parameter2Name }}`
+- [ ] __5:__ The function returns a promise that resolves to the results of the query.
