First pass refactor
* Massive file restructuring to organize files by challenge version instead of challenge part
* Data restructuring to make database-based string definitions less repetitive / prone to error

--- a/challenges/versions/a/src/views/p3-ejs.mustache
+++ b/challenges/versions/a/src/views/p3-ejs.mustache
@@ -9,7 +9,7 @@
 
 <body>
   <h1>{{ p3viewTitleStart }} <%= {{ parameterName }} %> </h1>
-  <button id="{{ buttonId }}">{{ buttonText }}</button>
+  <button id="{{ removeButtonId }}">{{ removeButtonText }}</button>
   <div id="message">
     <p>
       <% if (locals.message) { %>
