--- a/challenges/versions/a/src/views/p3-pug.mustache
+++ b/challenges/versions/a/src/views/p3-pug.mustache
@@ -6,7 +6,7 @@ html
     link(rel='stylesheet' href='/<% endpoint %>.css')
   body
     h1 <% p3viewTitleStart %> #{<% parameterName %>}
-    button(id='<% buttonId %>') <% buttonText %>
+    button(id='<% removeButtonId %>') <% removeButtonText %>
     div(id='message')
       p= message
     table(class='<% endpoint %>')
