Implement universal strings for part b

--- a/challenges/versions/_common/instructions/README.mustache
+++ b/challenges/versions/_common/instructions/README.mustache
@@ -26,7 +26,7 @@ This challenge has three parts:
 
 ### Part 1: SQL
 
-##### PostgreSQL, Node.js, & pg-promise
+#### PostgreSQL, Node.js, & pg-promise
 
 #### ER Diagram
 
@@ -38,7 +38,7 @@ An ER diagram has been provided that visualizes the database schema:
 
 ### Part 2: Express
 
-##### Starting the server
+#### Starting the server
 
 To start the server, run: `npm start`.
 
@@ -46,7 +46,7 @@ To start the server, run: `npm start`.
 
 ### Part 3: Front-End
 
-##### Starting the server
+#### Starting the server
 
 To start the server, run: `npm start`.
 
@@ -59,8 +59,9 @@ Let's do a little cleanup:
 1. End the video recording (if applicable)
 2. From your terminal, stop any running express servers
 3. From your terminal, `cd` out of the usb drive directory
-4. Quit your terminal application
-5. Quit your text editor application
-6. Close any browser windows pertaining to the challenge
-7. `dropdb {{ dbName }}`
+4. Close any browser windows pertaining to the challenge
+5. Drop the database (`dropdb {{ dbName }}`)
+6. Copy the command from the #8 below to the clipboard, and remember the final two instructions.
+7. Quit your text editor application
 8. Eject the USB drive (`diskutil unmount {{{ drivePath }}}`)
+9. Quit your terminal application
