--- a/challenges/versions/b/instructions/p2.mustache
+++ b/challenges/versions/b/instructions/p2.mustache
@@ -1,3 +1,5 @@
+#### POST Route
+
 Create a POST route for `{{{ p2.postEndpoint }}}` that receives JSON data and adds a new {{ p2.mainTableRootName }} to the database. Use the `{{ p2.dbFuncName }}` function provided in `db.js`. __For the purposes of this section, assume the {{ p2.parameter2Description }} already exists in the database.__ Example JSON POST data:
 
 ```
