--- a/challenges/versions/b/instructions/p3.mustache
+++ b/challenges/versions/b/instructions/p3.mustache
@@ -1,6 +1,6 @@
 ##### DOM Manipulation
 
-In this section, the scaffolding has been created for a `/{{ p3.endpoint }}` route that returns a page with {{ p3.p3itemDescription}}s. Choose a template engine (EJS or Pug) in `app.js`, then make a `GET` request for the `/{{ p3.endpoint }}` resource to see the rendered page.
+In this section, the scaffolding has been created for a(n) `/{{ p3.endpoint }}` route that returns a page with {{ p3.p3itemDescription}}s. Choose a template engine (EJS or Pug) in `app.js`, then make a `GET` request for the `/{{ p3.endpoint }}` resource to see the rendered page.
 
 The challenge for this section: when a user clicks any {{ p3.p3itemDescription }} list item, the text for that item should turn red.
 
