Add strings for version c

--- a/challenges/versions/_common/instructions/README.mustache
+++ b/challenges/versions/_common/instructions/README.mustache
@@ -61,7 +61,7 @@ Let's do a little cleanup:
 3. From your terminal, `cd` out of the usb drive directory
 4. Close any browser windows pertaining to the challenge
 5. Drop the database (`dropdb {{ dbName }}`)
-6. Copy the command from the #8 below to the clipboard, and remember the final two instructions.
+6. Copy the command from the #8 below to the clipboard, and memorize or write down the final two instructions.
 7. Quit your text editor application
 8. Eject the USB drive (`diskutil unmount {{{ drivePath }}}`)
 9. Quit your terminal application
