--- a/challenges/versions/a/instructions/p3.mustache
+++ b/challenges/versions/a/instructions/p3.mustache
@@ -7,5 +7,6 @@ The challenge for this section: when a user clicks the button labeled `{{ p3.rem
 You may use vanilla JS or JQuery.
 
 - [ ] __10:__ The `{{ p3.removeButtonText }}` button has an on click event listener.
-- [ ] __10:__ The {{ p3.dataName }} list has one fewer row after the click.
+- [ ] __10:__ The {{ p3.dataName }} list has one fewer row after the first click.
+- [ ] __15:__ The {{ p3.dataName }} list has one fewer row after each subsequent click.
 - [ ] __10:__ If the list is empty when the button is clicked, the page displays a message in the div with the id `message`: "All out of {{ p3.dataName }}s"
