Create version f of the challenge and add new example results for 'teams'

--- a/challenges/versions/_common/instructions/README.mustache
+++ b/challenges/versions/_common/instructions/README.mustache
@@ -28,11 +28,13 @@ This challenge has three parts:
 
 #### PostgreSQL, Node.js, & pg-promise
 
-#### ER Diagram
+##### ER Diagram
 
 An ER diagram has been provided that visualizes the database schema:
 
 ![ER Diagram](/part-1/{{ dbType }}_ERD.png)
+
+##### Challenge
 
 {{> part-1}}
 
