Correct small errors with version f; add version f data for other dbs

--- a/challenges/versions/f/src/views/p3-ejs.mustache
+++ b/challenges/versions/f/src/views/p3-ejs.mustache
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-  <h1>{{ mainTableRootName }}s</h1>
-  <input id="new-{{ secondaryTableRootName }}">
+  <h1>{{ mainTableRootNameCaps }}s</h1>
+  <input id="monster-{{ secondaryTableRootName }}">
   <button id="{{ buttonId }}">{{ buttonText }}</button>
   <table class="{{ endpoint }}">
     <thead>
