--- a/challenges/versions/f/src/views/p3-pug.mustache
+++ b/challenges/versions/f/src/views/p3-pug.mustache
@@ -7,7 +7,7 @@ html
   body
     h1 <% mainTableRootNameCaps %>s
     input(id="monster-<% secondaryTableRootName %>")
-    button(id=<% buttonId %>) <% buttonText %>
+    button(id="<% buttonId %>") <% buttonText %>
     table(class="<% endpoint %>")
       thead
         tr
